# gloom

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.rst  create_code_archive_for_blackboard_LINUX.sh  create_code_archive_for_blackboard_WINDOWS.bat
gloom/shaders/: simple.frag  simple.vert
gloom/src/: camera.hpp  gloom.hpp  main.cpp  program.cpp  program.hpp  shader.hpp
gloom/src/gloom/: camera.hpp  gloom.hpp  shader.hpp
